--- a/index.html
+++ b/index.html
@@ -116,35 +116,37 @@
 		<div class="book">
 			<div class="container">
 				<h3>我們的位置不太夠坐<br>要不要先訂位呢?</h3>
-				<img src="assets/map.png" alt="map">
-				<form action="index.html" class="booking">
-					<label for="name" class="label">姓名</label>
-					<input id="name" name="name" type="text" class="input" placeholder="請輸入您的姓名">
-
-					<label for="tel" class="label">電話</label>
-                    <input id="tel" name="tel" type="tel" class="input" placeholder="請輸入您的電話">
-
-                    <label for="email" class="label">信箱</label>
-                    <input id="email" name="email" type="email" class="input" placeholder="請輸入您的信箱">
-
-                    <label for="number" class="label">人數</label>
-                    <input id="number" name="number" type="number" class="input" placeholder="請輸入您要的人數">
-
-                    <h5>是否需要素食</h5>
-                    <div class="meat_1">
-                    	<input type="radio" name="meat" id="meat_1" value="yes">
-	                    <label for="meat_1">是</label>
-                    </div>
-                    <div class="meat_2">
-                    	<input type="radio" name="meat" id="meat_2" value="no">
-	                    <label for="meat_2">否</label>
-                    </div>
-
-                    <div class="btn">
-	                    <input type="reset" class="btn_r" value="取消">
-	                    <input type="submit" class="btn_s" value="送出">                    
-                    </div>
-				</form>
+				<div class="wrap">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3640.8627338753367!2d120.66379831476836!3d24.141458284398038!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34693d0a76111357%3A0x41359914b0dd7ee7!2z6Ie65Lit5biC56uL5aSn5aKp5paH5YyW5Lit5b-D!5e0!3m2!1szh-TW!2stw!4v1615786357109!5m2!1szh-TW!2stw" width="480" height="370" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+					<form action="index.html" class="booking">
+						<label for="name" class="label">姓名</label>
+						<input id="name" name="name" type="text" class="input" placeholder="請輸入您的姓名">
+	
+						<label for="tel" class="label">電話</label>
+						<input id="tel" name="tel" type="tel" class="input" placeholder="請輸入您的電話">
+	
+						<label for="email" class="label">信箱</label>
+						<input id="email" name="email" type="email" class="input" placeholder="請輸入您的信箱">
+	
+						<label for="number" class="label">人數</label>
+						<input id="number" name="number" type="number" class="input" placeholder="請輸入您要的人數">
+	
+						<h5>是否需要素食</h5>
+						<div class="meat_1">
+							<input type="radio" name="meat" id="meat_1" value="yes">
+							<label for="meat_1">是</label>
+						</div>
+						<div class="meat_2">
+							<input type="radio" name="meat" id="meat_2" value="no">
+							<label for="meat_2">否</label>
+						</div>
+	
+						<div class="btn">
+							<input type="reset" class="btn_r" value="取消">
+							<input type="submit" class="btn_s" value="送出">                    
+						</div>
+					</form>
+				</div>
 			</div>
 		</div>
 	</div>
